[package]
name = "simple-ball-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
rapier3d = { version = "*", features = [ "wasm-bindgen", "enhanced-determinism" ] }

[dev-dependencies]
wasm-bindgen-test = "0.3"